portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.9-15.build.log
15:15:42 **** Build of configuration Debug for project ex.9-15 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.9-15.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.9-15.d" -MT"ex.9-15.o" -o "ex.9-15.o" "../ex.9-15.cpp"
../ex.9-15.cpp:17:2: error: missing return type for function 'cArray'; did you mean the constructor name 'carray'?
        cArray(int co = 1) {
        ^~~~~~
        carray
../ex.9-15.cpp:21:2: error: missing return type for function 'cArray'; did you mean the constructor name 'carray'?
        cArray(const cArray &Ary) {
        ^~~~~~
        carray
../ex.9-15.cpp:21:15: error: unknown type name 'cArray'; did you mean 'carray'?
        cArray(const cArray &Ary) {
                     ^~~~~~
                     carray
../ex.9-15.cpp:11:7: note: 'carray' declared here
class carray{
      ^
../ex.9-15.cpp:27:3: error: expected the class name after '~' to name a destructor
        ~cArray() {delete [] ary;}
         ^~~~~~
         carray
../ex.9-15.cpp:36:2: error: unknown type name 'cArray'; did you mean 'carray'?
        cArray ary1(5);
        ^~~~~~
        carray
../ex.9-15.cpp:11:7: note: 'carray' declared here
class carray{
      ^
../ex.9-15.cpp:37:2: error: unknown type name 'cArray'; did you mean 'carray'?
        cArray ary2 = ary1;
        ^~~~~~
        carray
../ex.9-15.cpp:11:7: note: 'carray' declared here
class carray{
      ^
../ex.9-15.cpp:39:7: error: no member named 'print' in 'carray'
        ary1.print();
        ~~~~ ^
../ex.9-15.cpp:40:7: error: no member named 'print' in 'carray'
        ary2.print();
        ~~~~ ^
8 errors generated.
make: *** [ex.9-15.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:15:42 Build Failed. 9 errors, 0 warnings. (took 739ms)

